# selection-poste-enm

./: .eslintrc.json  .gitignore  .pnp.cjs  .prettierignore  README.md  latest.json  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build_release.yml  dependabot_automerge.yml  lint.yml  lint_js.yml  lint_rs.yml  test_build.yml
_state/: appState.ts  appealCourts.ts  document.ts  groups.ts  index.ts  positions.ts  roles.ts  tags.ts  timeWindow.ts  tribunals.ts
components/: PositionsList.tsx  StrictModeDroppable.tsx  card_focus.tsx  card_small.tsx  color_picker.tsx  drawer_menu.tsx  header.tsx  layout.tsx  positions_list.tsx  rank_inputgroup.tsx  react_editor_form.tsx  search_bar.tsx  tribunal_details.tsx
components/Badges/: placed.tsx  prevalent_domain.tsx  tag.tsx  time_to.tsx
components/CardFocus/: document_container.tsx  index.tsx  react_editor_form.tsx  tag_container.tsx  tribunal_details.tsx
components/DrawerMenu/: color_code.tsx  filters.tsx  index.tsx
components/Header/: index.tsx  search_bar.tsx
components/Home/: card_small.tsx  positions_list.tsx
components/Onboarding/: criterion_display.tsx  criterion_form.tsx  criterion_select.tsx  index.tsx  step1.tsx  step2.tsx  step3.tsx  step4.tsx  step_actions.tsx  stepper.tsx
components/Settings/: appeal_court_color.tsx  color_picker.tsx  danger_zone.tsx  group_color.tsx  menu.tsx  role_color.tsx  tags.tsx  time_windows.tsx
pages/: _app.tsx  _document.tsx  index.tsx  settings.tsx
public/: splashscreen.html
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/db/: selection-poste-enm.sqlite3
src-tauri/migrations/2023-01-25-122252_create_model/: down.sql  up.sql
src-tauri/migrations/2023-01-25-134744_insert_default_data/: down.sql  up.sql
src-tauri/migrations/2023-01-28-181133_default_positions/: down.sql  up.sql
src-tauri/migrations/2023-03-01-131853_create_document_model/: up.sql
src-tauri/src/: main.rs  schema.rs
src-tauri/src/models/: app_state.rs  appeal_court.rs  document.rs  group.rs  mod.rs  position.rs  role.rs  tag.rs  time_window.rs  tribunal.rs
state/: groups.ts  index.ts  positions.ts  roles.ts
styles/: globals.css
types/: types.ts
