[package]
name = "selection-poste-enm"
version = "1.2.0"
description = "Selection Poste ENM"
authors = ["Tristan Pouliquen <tristan.pouliquen@yahoo.fr>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/TristanPouliquen/selection-poste-enm"
default-run = "selection-poste-enm"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["fs-all", "path-all", "updater"] }
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
diesel_migrations = {version = "2.2.0", features = ["sqlite"] }
remove_dir_all = "0.8.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
